AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=benchmark
LIBS += -lpthread
benchmark_CFLAGS = -g
benchmark_SOURCES= cheetah/list.h cheetah/event.h cheetah/reactor.h cheetah/reactor.h cheetah/polling_cheetah/policy.h env_macros.h cheetah/utility.h cheetah/event_ht.h cheetah/log.h cheetah/lock.h cheetah/timer.h cheetah/signal.h  event_ht.c event.c reactor.c test/timer_test.c list.c log.c lock.c polling_policy.c utility.c signal.c polling_select.c polling_epoll.c polling_poll.c timer.c
